Update redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=lotti-karotti.html">
+    <meta http-equiv="refresh" content="0; url=karten-ziehen.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lotti Karotti Karten-App</title>
 </head>
 <body>
-    <p>Weiterleitung zur <a href="lotti-karotti.html">Lotti Karotti Karten-App</a>...</p>
+    <p>Weiterleitung zur <a href="karten-ziehen.html">Lotti Karotti Karten-App</a>...</p>
 </body>
 </html>
