--- a/karten-ziehen.html
+++ b/karten-ziehen.html
@@ -29,14 +29,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 20px;
+            padding: 10px;
         }
 
         .container {
             background: white;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            padding: 30px;
+            padding: 20px;
             max-width: 500px;
             width: 100%;
             text-align: center;
@@ -44,22 +44,22 @@
 
         h1 {
             color: #333;
-            margin-bottom: 10px;
-            font-size: 2em;
+            margin-bottom: 5px;
+            font-size: 1.8em;
         }
 
         .subtitle {
             color: #666;
-            margin-bottom: 30px;
+            margin-bottom: 15px;
             font-size: 0.9em;
         }
 
         .card-display {
             background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
             border-radius: 15px;
-            padding: 60px 40px;
-            margin: 30px 0;
-            min-height: 200px;
+            padding: 40px 30px;
+            margin: 15px 0;
+            min-height: 150px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -89,13 +89,13 @@
         }
 
         .card-icon {
-            font-size: 4em;
-            margin-bottom: 15px;
+            font-size: 3em;
+            margin-bottom: 10px;
         }
 
         .card-text {
             color: white;
-            font-size: 2em;
+            font-size: 1.5em;
             font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
@@ -104,14 +104,14 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             border: none;
-            padding: 50px 50px;
-            font-size: 1.5em;
+            padding: 35px 40px;
+            font-size: 1.3em;
             border-radius: 50px;
             cursor: pointer;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
             transition: all 0.3s ease;
             font-weight: bold;
-            margin: 10px;
+            margin: 10px 0;
             width: 100%;
             max-width: 350px;
         }
@@ -128,15 +128,15 @@
         .stats {
             background: #f8f9fa;
             border-radius: 10px;
-            padding: 20px;
-            margin-top: 30px;
+            padding: 15px;
+            margin-top: 15px;
         }
 
         .stats-title {
             color: #333;
             font-weight: bold;
-            margin-bottom: 15px;
-            font-size: 1.1em;
+            margin-bottom: 10px;
+            font-size: 1em;
         }
 
         .stats-grid {
@@ -147,26 +147,26 @@
 
         .stat-item {
             background: white;
-            padding: 15px;
+            padding: 10px;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .stat-label {
             color: #666;
-            font-size: 0.9em;
-            margin-bottom: 5px;
+            font-size: 0.85em;
+            margin-bottom: 3px;
         }
 
         .stat-value {
             color: #333;
-            font-size: 1.5em;
+            font-size: 1.3em;
             font-weight: bold;
         }
 
         .empty-message {
             color: white;
-            font-size: 1.5em;
+            font-size: 1.2em;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
@@ -222,7 +222,7 @@
                     <div class="stat-value" id="countCarrot">12</div>
                 </div>
             </div>
-            <div style="margin-top: 15px; color: #666; font-weight: bold;">
+            <div style="margin-top: 10px; color: #666; font-weight: bold; font-size: 0.9em;">
                 Gesamt: <span id="totalCards">48</span> Karten
             </div>
         </div>
