--- a/karten-ziehen.html
+++ b/karten-ziehen.html
@@ -345,7 +345,7 @@
         // Service Worker Registrierung für PWA
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js')
+                navigator.serviceWorker.register('./service-worker.js')
                     .then(registration => {
                         console.log('Service Worker registriert:', registration.scope);
                     })
